force-app/main/default/objects/Branch__c/fields/ABM_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>ABM_Mobile_No__c</fullName>
    <label>ABM Mobile No</label>
    <type>Phone</type>
</CustomField>