force-app/main/default/objects/Branch__c/fields/CH_Mobile__c.field-meta.xml
<CustomField>
    <fullName>CH_Mobile__c</fullName>
    <label>CH Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>