force-app/main/default/objects/Branch__c/fields/Ch_Name__c.field-meta.xml
<CustomField>
    <fullName>Ch_Name__c</fullName>
    <label>Ch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>