force-app/main/default/objects/Branch__c/fields/DM_Mobile__c.field-meta.xml
<CustomField>
    <fullName>DM_Mobile__c</fullName>
    <label>DM Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>